tests/negative/nested_range_outer_var_assign.far
fun main() -> i64 {
  n = 0
  for i in 0..<3 {
    for j in 0..<3 {
      i = 0
      n = n + 1
    }
  }
  return n
}
